# NerdMiner_v2

./: platformio.ini
SLS/: han-wt32.sll  han-wt32.spj
commons/hansolov2/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
commons/hansolov2/images/: ui_img_124802760.c  ui_img_783383759.c  ui_img_93039294.c  ui_img_metal2_png.c  ui_img_sky_png.c
commons/hansolov2/screens/: ui_HomeScreen.c  ui_SplashScreen.c
src/: CMakeLists.txt  NerdMinerV2.ino.cpp  gui.cpp  gui.h  mining.cpp  monitor.cpp  wManager.cpp
